--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 this.setState({
                   name: 'コウペン',
                   genera: 'ぺんぎんポケモン(？)',
-                  flavor_text: 'ぺん　ぎん',
+                  flavor_text: '生きとし　生けるもの　すべてを　\n肯定　してくれる　\nコウテイ　ペンギンの　赤ちゃん。',
                 });
               }
             })
@@ -253,7 +253,7 @@
               this.setState({
                 name: 'コウペン',
                 genera: 'ぺんぎんポケモン(？)',
-                flavor_text: 'ぺん　ぎん',
+                flavor_text: '生きとし　生けるもの　すべてを　\n肯定　してくれる　\nコウテイ　ペンギンの　赤ちゃん。',
               });
             });
         } 
