--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       const First = (props) => {
         return <div>
           <p style={{ fontSize: '1.5em' }} class="d-flex justify-content-center">{props.title}</p>
-          <p class="d-flex justify-content-center">date: {props.date}</p>
+          <p style={{ fontSize: '1.2em' }} class="d-flex justify-content-center">{props.date}</p>
         </div>
       }
 
@@ -277,14 +277,14 @@
                       return <p class="d-flex justify-content-center text-danger animated tada infinite">Last One Day!!!!!!!!!</p>;
                     }
                   })()}
-                <First title={d.name} date={d.moment.format('Y-M-D')} />
+                <First title={d.name} date={d.moment.format('Y/MM/DD')} />
                 {(() => {
                   const du = moment.duration(d.moment.diff(moment()));
                       return <div class="text-center"><Row>
-                              <Col style={{ fontSize: "1.5em" }}>{Math.floor( du.asDays() )}</Col>
-                              <Col style={{ fontSize: "1.5em" }}>{du.hours()}</Col>
-                              <Col style={{ fontSize: "1.5em" }}>{du.minutes()}</Col>
-                              <Col style={{ fontSize: "1.5em" }}>{du.seconds()}</Col>
+                              <Col style={{ fontSize: "1.5em" }}>{ Math.floor( du.asDays() )<= 0 ? 0 : Math.floor( du.asDays() ) }</Col>
+                              <Col style={{ fontSize: "1.5em" }}>{ du.hours()<= 0 ? 0 : du.hours() }</Col>
+                              <Col style={{ fontSize: "1.5em" }}>{ du.minutes()<= 0 ? 0 : du.minutes() }</Col>
+                              <Col style={{ fontSize: "1.5em" }}>{ du.seconds()<= 0 ? 0 : du.seconds() }</Col>
                             </Row>
                             <Row>
                               <Col>days</Col>
